Reach 80% jacoco coverage